--- a/people/templates/people/chooser_results.html
+++ b/people/templates/people/chooser_results.html
@@ -24,7 +24,7 @@
                     <h2><a class="item-choice" href="{{ row.choose_url }}">{{ row.name }}</a></h2>
                 </td>
                 <td>{{ row.title|default:'' }}</td>
-                <td>{{ row.organization.distinct_name|default:'' }}</td>
+                <td>{{ row.organization|default:'' }}</td>
             </tr>
         {% endfor %}
     </tbody>
