Fix dropdown ugly rendering for autocomplete widgets in admin

--- a/admin_site/static/css/wagtail_admin_overrides.css
+++ b/admin_site/static/css/wagtail_admin_overrides.css
@@ -197,3 +197,12 @@ expects main contact as 3rd element in container */
     font-size: 80%;
     color: white;
 }
+
+
+/* Prevent wagtail dropdown button arrow pseudo
+   element from being rendered uglily on top
+   of an autocomplete widget */
+.model_select2 .input select~span:after {
+  content: none;
+  display: none;
+}
