--- a/actions/templates/site_summary/actions.html
+++ b/actions/templates/site_summary/actions.html
@@ -1,6 +1,7 @@
 {% load i18n wagtailadmin_tags %}
 
-<li class="icon icon-fa-cubes">
+<li>
+    <span class="icon icon-fa-cubes"></span>
     <a href="{% url 'actions_action_modeladmin_index' %}">
     {% blocktrans count counter=total_actions with total_actions|intcomma as total %}
         <span>{{ total }}</span> action <span class="visuallyhidden">monitored in {{ plan.name }}</span>
