--- a/admin_site/static/css/wagtail_admin_overrides.css
+++ b/admin_site/static/css/wagtail_admin_overrides.css
@@ -1,7 +1,34 @@
-.halloeditor, .tagit, input, select, textarea, .button {
-    font-family: inherit;
+.w-summary .icon {
+    width: 1.3em;
 }
 
+.select2-search__field:focus-visible {
+    outline: none !important;
+}
+
+.select2-container {
+    width: 100% !important;
+    min-width: 10em !important;
+}
+
+.select2-container .select2-selection {
+    background-color: var(--w-color-white);
+    border: 1px solid var(--w-color-grey-150);
+    border-radius: 0.3125rem;
+    color: var(--w-color-grey-600);
+    font-size: 1.125rem;
+    font-weight: 400;
+    line-height: 1.5;
+    min-height: 2.625rem;
+    padding: 0.375rem 1.25rem;
+    width: 100%;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    top: 0.5rem !important;
+}
+
+/*
 .content .Draftail-Editor .DraftEditor-root,
 .content .title .halloeditor,
 .content .title input,
@@ -116,11 +143,11 @@ header .button:hover {
 .objects .object>.title-wrapper:before {
     background-color: #7AD7A4;
 }
-
+*/
 /* Condensed inline panel override */
 
 /* Do not let panel rows overflow the parent */
-
+/*
 .object .object-layout_big-part {
     max-width: 100%;
 }
@@ -128,12 +155,12 @@ header .button:hover {
 .condensed-inline-panel__card-header > h2 {
     font-size: 1rem;
 }
-
+*/
 /* Contact persons list override */
 
 /* Add fa-icons and highlight main contact person,
 expects main contact as 3rd element in container */
-
+/*
 #id_contact_persons .condensed-inline-panel__card:nth-child(3) > .condensed-inline-panel__card-header h2::before {
     content: "\f2bd";
     color: #0A5E43;
@@ -158,9 +185,9 @@ expects main contact as 3rd element in container */
     margin-right: .5em;
     color: #aaaaaa;
 }
-
+*/
 /* Add drag fa-icon as pseudo-element */
-
+/*
 #id_contact_persons .condensed-inline-panel__card-header h2 {
     margin-left: 1.25rem;
 }
@@ -178,9 +205,9 @@ expects main contact as 3rd element in container */
 #id_contact_persons .condensed-inline-panel__card:hover .condensed-inline-panel__card-header::before {
     color: #0A5E43;
 }
-
+*/
 /* Prevent calendar icon from blocking datefield clicks */
-
+/*
 .date_field .input::before, .date_time_field .input::before {
     pointer-events: none;
 }
@@ -197,12 +224,14 @@ expects main contact as 3rd element in container */
     font-size: 80%;
     color: white;
 }
-
+*/
 
 /* Prevent wagtail dropdown button arrow pseudo
    element from being rendered uglily on top
    of an autocomplete widget */
+/*
 .model_select2 .input select~span:after {
   content: none;
   display: none;
 }
+*/
