--- a/admin_site/templates/wagtailadmin/base.html
+++ b/admin_site/templates/wagtailadmin/base.html
@@ -3,8 +3,8 @@
 
 {% block branding_logo %}
     {% if active_client and active_client.logo %}
-    {% image active_client.logo width-120 %}
-    <h5>{{ active_plan.name }}</h5>
+    {% image active_client.logo width-80 %}
+    <!-- <h5>{{ active_plan.name }}</h5> -->
     {% endif %}
 {% endblock %}
 
