--- a/admin_site/templates/wagtailadmin/login.html
+++ b/admin_site/templates/wagtailadmin/login.html
@@ -6,13 +6,10 @@
 {% block extra_css %}
     {{ block.super }}
     <style>
-        {% if form.client and form.client.azure_ad_tenant_id %}
         .login-form {
             display: none;
         }
-        {% endif %}
     </style>
-    <!-- <link rel="stylesheet" href="{% versioned_static 'wagtailadmin/css/layouts/login.css' %}" type="text/css" /> -->
 {% endblock %}
 
 {% block branding_login %}{% if form.client and form.client.login_header_text %}{{ form.client.login_header_text }}{% else %}{% trans "Sign in to Kausal Watch" %}{% endif %}{% endblock %}
@@ -21,15 +18,12 @@
     {% if form.client and form.client.logo %}
         {% image form.client.logo width-256 %}
     {% endif %}
-    {% if form.client and form.client.azure_ad_tenant_id %}
-        <a href="{% url 'auth_login' %}?next={% if request.GET.next %}{{ request.GET.next }}{% else %}{% url 'wagtailadmin_home' %}{% endif %}">
-            <button type="submit" class="button button-longrunning" data-clicked-text="{% trans 'Signing in…' %}" style="margin-bottom: 2em; margin-top: 4em">
-                <span class="icon icon-spinner"></span><em>{% if form.client and form.client.login_button_text %}{{ form.client.login_button_text }}{% else %}{% trans 'Sign in' %}{% endif %}</em>
-            </button>
-        </a>
-
-        <p><a href="#" id="password-signin-display-button" style="cursor: pointer; text-decoration: none; color: inherit">{% trans "If you have a separate password, click here to sign in" %}</a></p>
-    {% endif %}
+    <a href="{% url 'auth_login' %}?next={% if request.GET.next %}{{ request.GET.next }}{% else %}{% url 'wagtailadmin_home' %}{% endif %}">
+        <button type="submit" class="button button-longrunning" data-clicked-text="{% trans 'Signing in…' %}" style="margin-bottom: 2em; margin-top: 4em">
+            <span class="icon icon-spinner"></span><em>{% if form.client and form.client.login_button_text %}{{ form.client.login_button_text }}{% else %}{% trans 'Sign in using your organization account' %}{% endif %}</em>
+        </button>
+    </a>
+    <p><a href="#" id="password-signin-display-button" style="cursor: pointer; text-decoration: none; color: inherit">{% trans "If you have a separate password, click here to sign in" %}</a></p>
     {% block below_login %}{% endblock %}
 {% endblock %}
 
