Start using Sentry from extensions
- Remove npm finder
  all of the browser npm dependencies are in extensions
- If KausalSentry exists (from extensions),
  initialize it in base admin template

--- a/templates/wagtailadmin/base.html
+++ b/templates/wagtailadmin/base.html
@@ -9,18 +9,18 @@
 {% endblock %}
 
 {% block js %}
+    {{ block.super }}
     {% if sentry_dsn %}
-    <script src="{% versioned_static '@sentry/browser/build/bundle.min.js' %}"></script>
     <script>
-        Sentry.init({
-            dsn: '{{ sentry_dsn }}',
-        });
-        Sentry.configureScope(function(scope) {
-            scope.setUser({ email: '{{ request.user.email }}' });
-            scope.setTag('plan', '{{ active_plan.identifier }}');
-            scope.setTag('client', '{{ active_client.name|default:"none"|escape }}');
-        });
+        if (KausalSentry !== undefined) {
+            KausalSentry.initSentry({
+                dsn: '{{ sentry_dsn }}',
+                user: '{{ request.user.email }}',
+                plan: '{{ active_plan.identifier }}',
+                environment: '{{ deployment_type }}',
+                client: '{{ active_client.name|default:"none"|escape }}'
+            });
+        }
     </script>
     {% endif %}
-    {{ block.super }}
 {% endblock %}
