--- a/notifications/mjml-templates/updated_indicator_values_due_soon.mjml
+++ b/notifications/mjml-templates/updated_indicator_values_due_soon.mjml
@@ -1,4 +1,4 @@
-{% extends "person_notification.mjml" %}
+{% extends "bookended_base.mjml" %}
 
 {% block notification_content %}
 <mj-section mj-class="notification-content-section">
