--- a/notifications/mjml-templates/user_feedback_received.mjml
+++ b/notifications/mjml-templates/user_feedback_received.mjml
@@ -1,4 +1,4 @@
-{% extends "person_notification.mjml" %}
+{% extends "bookended_base.mjml" %}
 
 {% block notification_content %}
 <mj-section mj-class="notification-content-section">
