--- a/notifications/mjml-templates/not_enough_tasks.mjml
+++ b/notifications/mjml-templates/not_enough_tasks.mjml
@@ -5,7 +5,9 @@
     <mj-column>
         {% for item in items %}{% with action=item.action %}
         <mj-text align="left">
-          <strong>Toimenpide {{ item.action.identifier }}. {{ item.action.name }}</strong>
+          <strong>{% trans trimmed identifier=action.identifier, name=action.name %}
+          Action {{ identifier }}. {{ name }}
+          {% endtrans %}</strong>
         </mj-text>
         {% include 'includes/modify_action_button.mjml' %}
         {% if not loop.last %}<mj-divider />{% endif %}
