--- a/admin_site/templates/wagtailadmin/login.html
+++ b/admin_site/templates/wagtailadmin/login.html
@@ -1,16 +1,6 @@
 {% extends "wagtailadmin/login.html" %}
-{% load wagtailimages_tags wagtailadmin_tags i18n static %}
-{% block titletag %}{% trans "Sign in" %}{% endblock %}
-{% block bodyclass %}login{% endblock %}
-
-{% block extra_css %}
-    {{ block.super }}
-    <style>
-        .login-form {
-            display: none;
-        }
-    </style>
-{% endblock %}
+{% load i18n wagtailadmin_tags %}
+{% load static %}
 
 {% block branding_logo %}
     <div class="login-logo">
@@ -18,31 +8,96 @@
     </div>
 {% endblock %}
 
-{% block branding_login %}{% if form.client and form.client.login_header_text %}{{ form.client.login_header_text }}{% else %}{% trans "Sign in to Kausal Watch" %}{% endif %}{% endblock %}
+{% block branding_login %}{% trans "Sign in to Kausal Watch admin" %}{% endblock %}
 
 {% block above_login %}
-    {% if form.client and form.client.logo %}
-        {% image form.client.logo width-256 %}
-    {% endif %}
-    <a href="{% url 'auth_login' %}?next={% if request.GET.next %}{{ request.GET.next }}{% else %}{% url 'wagtailadmin_home' %}{% endif %}">
-        <button type="submit" class="button button-longrunning" data-clicked-text="{% trans 'Signing in…' %}" style="margin-bottom: 2em; margin-top: 4em">
-            <span class="icon icon-spinner"></span><em>{% if form.client and form.client.login_button_text %}{{ form.client.login_button_text }}{% else %}{% trans 'Sign in using your organization account' %}{% endif %}</em>
-        </button>
-    </a>
-    <p><a href="#" id="password-signin-display-button" style="cursor: pointer; text-decoration: none; color: inherit">{% trans "If you have a separate password, click here to sign in" %}</a></p>
-    {% block below_login %}{% endblock %}
-{% endblock %}
+<script type="text/javascript">
+    $(function() {
+        const setError = (detail) => {
+            $('.messages').empty().append(`<ul><li class="error">${detail}</li></ul>`);
+        };
+        const setUnknownError = () => {
+            const msg = "{% trans 'Our apologies, the server is temporarily experiencing difficulties.' %}";
+            setError(msg);
+        };
+        const socialUrlBase = "{% url 'social:begin' 'BACKEND' %}"
+        const methodCheckUrl = "{% url 'admin_check_login_method' %}";
+        const pwField = $('input#id_password').closest('.w-field__wrapper ');
+        const pwInput = pwField.find('input');
+        const emailInput = $('input#id_username');
+        const resetToggle = $('a.reset-password');
+        const rememberMe = $('.remember-me');
+        const hiddenEls = [
+            pwField,
+            resetToggle,
+            rememberMe,
+        ];
+        let emailChecked = false;
+        const ITEM_NAME = 'admin-default-email';
 
-{% block extra_js %}
-{{ block.super }}
-<script>
-    $(function(){
-        $('form input[name=username]').trigger('focus');
-    });
-    $(function(){
-        $('#password-signin-display-button').click(function() {
-            $('.login-form').show();
+        if (!emailInput.val()) {
+            // If the form is empty, prefill the email address from local storage.
+            const storedEmail = localStorage.getItem(ITEM_NAME);
+            if (storedEmail) {
+                emailInput.val(storedEmail);
+            }
+        } else {
+            // If email has already been filled, we let the form function as usual.
+            return;
+        }
+
+        hiddenEls.forEach((el) => el.hide());
+        $('.login-form').submit(async (ev) => {
+            // If the password field was previously enabled, we let the
+            // form submission go through.
+            if (emailChecked || pwField.is(':visible')) {
+                return;
+            }
+
+            window.localStorage.removeItem(ITEM_NAME);
+            ev.preventDefault();
+            ev.stopPropagation();
+
+            const form = $(ev.currentTarget).closest('form');
+            const email = emailInput.val();
+
+            const ret = await fetch(methodCheckUrl, {
+                method: 'POST',
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({email}),
+            });
+            const resp = await ret.json();
+            if (ret.status != 200) {
+                const { detail, code } = resp;
+                if (detail) {
+                    setError(detail);
+                } else {
+                    setUnknownError();
+                }
+                setTimeout(() => { window.cancelSpinner() }, 50);
+                return;
+            }
+            const { method } = resp;
+            if (!method) {
+                setUnknownError();
+                return;
+            }
+            window.localStorage.setItem(ITEM_NAME, email);
+            if (method == 'password') {
+                hiddenEls.forEach((el) => el.show());
+                setTimeout(() => { window.cancelSpinner() }, 50);
+            } else {
+                let url = socialUrlBase.replace(/BACKEND/, method);
+                const next = form.find('input[name="next"]').val();
+                if (next) {
+                    url += '?' + (new URLSearchParams({next})).toString();
+                }
+                window.location = url;
+            }
         });
-    });
+    })
 </script>
 {% endblock %}
