Change code that relied on getting the client from the request

--- a/admin_site/templates/wagtailadmin/login.html
+++ b/admin_site/templates/wagtailadmin/login.html
@@ -93,7 +93,7 @@
                 let url = socialUrlBase.replace(/BACKEND/, method);
                 const next = form.find('input[name="next"]').val();
                 if (next) {
-                    url += '?' + (new URLSearchParams({next})).toString();
+                    url += '?' + (new URLSearchParams({next, email})).toString();
                 }
                 window.location = url;
             }
