--- a/people/templates/people/delete.html
+++ b/people/templates/people/delete.html
@@ -11,7 +11,7 @@
 
     {% block content_main %}
         <div class="nice-padding">
-            <h2>Confirm deletion of {% blocktrans trimmed with view.verbose_name|capfirst as model_name %}{{ model_name }}{% endblocktrans %}</h2>
+            <h2>{% blocktrans trimmed with view.verbose_name|capfirst as model_name %}Confirm deletion of {{ model_name }}{% endblocktrans %}</h2>
             <p>{% blocktrans trimmed with instance as instance_name %}'{{ instance_name }}' is currently connected to the following items. Please verify deletion:{% endblocktrans %}</p>
             <ul>
                 {% for obj in linked_objects %}<li><b>{{ obj|get_content_type_for_obj|title }}:</b> {{ obj }}</li>{% endfor %}
