Implement several views for Action workflows

--- a/templates/modeladmin/create.html
+++ b/templates/modeladmin/create.html
@@ -43,6 +43,7 @@
                                 <span class="icon icon-spinner"></span><em>{% trans 'Save and continue editing' %}</em>
                             </button>
                         </li>
+                        {# TODO Moderation workflow actions like in edit.html #}
                     </ul>
                 </div>
                 {# end of form_actions block #}
