--- a/templates/aplans/panels/read_only_inline_panel.html
+++ b/templates/aplans/panels/read_only_inline_panel.html
@@ -1,7 +1,8 @@
+{% load i18n %}
 {% for item in items %}
   <div class="w-field__wrapper " data-field-wrapper="">
     <div class="w-field__label">
-      {{ item.label }}
+      {% translate item.label %}
     </div>
     <div class="w-field__input">
       {{ item.value }}
