--- a/admin_site/templates/wagtailadmin/login.html
+++ b/admin_site/templates/wagtailadmin/login.html
@@ -60,6 +60,7 @@
 
             const form = $(ev.currentTarget).closest('form');
             const email = emailInput.val();
+            const next = form.find('input[name="next"]').val();
 
             const ret = await fetch(methodCheckUrl, {
                 method: 'POST',
@@ -67,7 +68,7 @@
                     'Accept': 'application/json',
                     'Content-Type': 'application/json',
                 },
-                body: JSON.stringify({email}),
+                body: JSON.stringify({email, next}),
             });
             const resp = await ret.json();
             if (ret.status != 200) {
@@ -91,7 +92,6 @@
                 setTimeout(() => { window.cancelSpinner() }, 50);
             } else {
                 let url = socialUrlBase.replace(/BACKEND/, method);
-                const next = form.find('input[name="next"]').val();
                 if (next) {
                     url += '?' + (new URLSearchParams({next, email})).toString();
                 }
